2005-10-17  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-util.el (w3m-add-face-property): Simplified.

2005-10-16  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-slashdot-jp.el (shimbun-slashdot-jp-group-alist):
	Update URL supporting by Slashcode 2.5.
	(shimbun-rss-build-message-id): Update regexp and msgid generate
	rule supporting by Slashcode 2.5.
	(shimbun-clear-contents): Add removal `script' tag.

2005-10-15  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* w3m-util.el (w3m-add-face-property): Add new functions.
	(w3m-remove-face-property): Ditto.

	* w3m.el (w3m-fontify-bold, w3m-fontify-underline)
	(w3m-fontify-strike-through, w3m-fontify-anchors)
	(w3m-fontify-images): Replace `w3m-add-text-properties' to
	`w3m-add-face-property' at FACE.
	(w3m-refontify-anchor): Change for FACE properly is list type.

2005-10-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el (w3m-insert-image): Make it work with a face text
	property whose value is a list.
	(w3m-remove-image): Remove useless text property.
	* w3m-e23.el (w3m-insert-image,w3m-remove-image): Same as
	w3m-e21.el's modification.

2005-10-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-mainichi.el (shimbun-mainichi-group-table): Allow to
	specify index pages; add kansai.sanshi group.
	(shimbun-index-url): Prefer the value specified by
	shimbun-mainichi-group-table.
	(shimbun-mainichi-get-headers): Follow
	shimbun-mainichi-group-table change.

2005-09-29  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-proc.el (w3m-process-filter): Fixed regexp.

2005-09-27  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-proc.el (w3m-process-filter): Remove SSL warning message
	for basic authentication over SSL.

2005-09-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-fontify): Remove empty lines at the beginning of the
	buffer (see the comment).

2005-09-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-w3m.el (mime-w3m-preview-text/html): Revert.

2005-09-21  Katsumi Yamaoka  <yamaoka@jpl.org>
