@@ -559,13 +559,17 @@ Wobble the selected window size to force redisplay of the header-line."
     (when window
       (unless (eq (window-buffer window) buffer)
 	(select-window window)
-	(switch-to-buffer buffer)
+	(bury-buffer (prog1
+			 (current-buffer)
+		       (switch-to-buffer buffer)))
 	(w3m-force-window-update window)))))
 
 (defun w3m-tab-click-mouse-function (event buffer)
   (let ((window (posn-window (event-start event))))
     (select-window window)
-    (switch-to-buffer buffer)
+    (bury-buffer (prog1
+		     (current-buffer)
+		   (switch-to-buffer buffer)))
     (w3m-force-window-update window)))
 
 (defvar w3m-tab-map nil)
